home page ui base functionality is done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Ether">
+        android:theme="@style/Theme.Ether"
+        tools:replace="android:dataExtractionRules,android:fullBackupContent"
+        >
         <activity
             android:name=".MainActivity"
             android:exported="true"
