--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,18 +4,16 @@ minSdk = "26"
 targetSdk = "36"
 agp = "8.13.2"
 walletkit = "1.6.6"
-kotlin = "2.2.21"
-ksp = "2.3.3"
+kotlin = "2.1.10"
+ksp = "2.1.10-1.0.31"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.10.0"
-activityCompose = "1.12.1"
-composeBom = "2025.12.00"
+composeBom = "2026.02.00"
 appcompat = "1.7.1"
 material = "1.13.0"
-material3Version = "1.4.0"
 room = "2.8.4"
 retrofit = "3.0.0"
 okHttp = "5.3.2"
@@ -25,12 +23,10 @@ lifecycleViewmodel = "2.10.0"
 datastore = "1.2.0"
 ktorVersion = "3.3.3"
 kotlinxSerializationJson = "1.9.0"
-icons = "1.7.8"
-foundationLayout = "1.10.3"
 nav3Core = "1.0.1"
 
 [libraries]
-androidx-compose-material-icons-core = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "icons" }
+androidx-compose-material-icons-core = { group = "androidx.compose.material", name = "material-icons-extended"}
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 walletkit = { module = "com.reown:walletkit", version.ref = "walletkit" }
 walletkit-android-core = { module = "com.reown:android-core", version.ref = "walletkit" }
@@ -38,7 +34,7 @@ junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
-androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
+androidx-activity-compose = { group = "androidx.activity", name = "activity-compose" }
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
 androidx-compose-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-compose-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
@@ -46,7 +42,7 @@ androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3Version" }
+androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
@@ -68,7 +64,7 @@ ktor-serialization = { group = "io.ktor", name = "ktor-serialization-kotlinx-jso
 ktor-logging = { group = "io.ktor", name = "ktor-client-logging", version.ref = "ktorVersion" }
 ktor-auth = { group = "io.ktor", name = "ktor-client-auth", version.ref = "ktorVersion" }
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
-androidx-compose-foundation-layout = { group = "androidx.compose.foundation", name = "foundation-layout", version.ref = "foundationLayout" }
+androidx-compose-foundation-layout = { group = "androidx.compose.foundation", name = "foundation-layout" }
 androidx-navigation3-runtime = { module = "androidx.navigation3:navigation3-runtime", version.ref = "nav3Core" }
 androidx-navigation3-ui = { module = "androidx.navigation3:navigation3-ui", version.ref = "nav3Core" }
 
@@ -97,20 +93,16 @@ compose = [
     "androidx-compose-ui-tooling-preview",
     "androidx-compose-material3"
 ]
+test-unit = [
+    "junit"
+]
 test = [
-    "junit",
-    "androidx-junit",
     "androidx-espresso-core",
-    "androidx-compose-ui-test-junit4"
+    "androidx-junit"
 ]
 debug = [
     "androidx-compose-ui-tooling",
     "androidx-compose-ui-test-manifest"
-]
-room = [
-    "room-runtime",
-    "room-compiler",
-    "room-ktx"
 ]
 retrofit = [
     "retrofit",
